[UPDATE] Created optional theme loading method from source and leaving default theme file on resources/themes folder